<resources>
    <string name="app_name">Atmanirbhar Tarun Manch</string>
    <string name="app_name_hindi">आत्मनिर्भर तरुण मंच</string>

    <string name="call_to_action">लोकल से ग्लोबल की ओर,</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="about">About</string>
    <string name="categories">Categories</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="recently_added">Recently Added</string>
    <string name="my_favorites">My Favorites</string>
    <string name="auto">Auto Garage, Tours, and Travels</string>
    <string name="see_all">See all</string>
    <string name="back_button">back_button</string>
    <string name="overview">Overview</string>
    <string name="contact_options">Contact Options</string>
    <string name="hindi_dummy">जिम्मे दिशामे रहारुप विशेष जाने करती पुर्व पासपाई वास्तव गटको संपादक पासपाई असक्षम नवंबर अथवा पहेला रहारुप विचारशिलता होसके जाएन तरहथा। पत्रिका सदस्य प्रमान व्यवहार कैसे बदले पहोच। लक्ष्य माध्यम स्थापित प्रति देते असरकारक उपयोगकर्ता विश्वव्यापि बनाकर तरहथा। प्रतिबध्दता कोहम रखति स्थिति वर्णित केन्द्रित हिंदी जिम्मे दिशामे रहारुप विशेष जाने करती पुर्व पासपाई वास्तव गटको संपादक पासपाई असक्षम नवंबर अथवा पहेला रहारुप विचारशिलता होसके जाएन तरहथा। पत्रिका सदस्य प्रमान व्यवहार कैसे बदले पहोच। लक्ष्य माध्यम स्थापित प्रति देते असरकारक उपयोगकर्ता विश्वव्यापि बनाकर तरहथा। प्रतिबध्दता कोहम रखति स्थिति वर्णित केन्द्रित हिंदी</string>
    <string name="suggested">Discover something new</string>
    <string name="available_locations">Available locations</string>
    <string name="indore">Indore</string>
    <string name="what_is_this_app">What is this app?</string>
    <string name="app_explanation">This app is a nonprofit initiative by Maharashtra Samaj Tarun Manch to provide a platform for newly started and growing local businesses. Through this app, we hope to bring the exposure and traction required by these businesses to thrive with a potential to take a leap of success.</string>
    <string name="submit_question">How can I submit my business/service?</string>
    <string name="submit_answer">The submissions are moderated to avoid spam. Please fill out the form and we will contact you with further details if required.</string>
    <string name="request_form">Request Form</string>
    <string name="contribute_project_question">How can I contribute to this project?</string>
    <string name="contribute_volunteer_answer">If you would like to volunteer, please contact Maharashtra Samaj Tarun Manch (see above) for further details.</string>
    <string name="contribute_developer_answer">If you are a developer and would like to contribute to the development of the app, please contact Ninad Kulkarni.</string>
    <string name="empty_recyclerview">You don\'t have favorites yet!</string>
    <string name="ujjain">Ujjain</string>
    <string name="dewas">Dewas</string>
    <string name="show_more">+ Show More</string>
    <string name="report">Report a problem</string>
    <string name="address">Address</string>
    <string name="report_question">I have a problem/query…</string>
    <string name="bug_report">Bug Report</string>
    <string name="rate">Rate on play store</string>
    <string name="share">Share</string>
    <string name="business_name">Business Name</string>
    <string name="owners">Owners</string>
    <string name="description">Description</string>
    <string name="location_address">Location Address</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="category_spinner_error">Please select a category to continue.</string>
    <string name="prashant_badwe">Prashant Badwe</string>
    <string name="sunil_dharmadhikari">Sunil Dharmadhikari</string>
    <string name="sameer_panse">Sameer Panse</string>
    <string name="sunil_deshpande">Sunil Deshpande</string>
    <string name="ninad_kulkarni">Ninad Kulkarni (Developer)</string>
    <string name="feature_question">I have a feature suggestion...</string>
</resources>